// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio allows numbers as value 1`] = `
<div
  class="TDS_Box-modules__betweenBottomMargin-2___31zX_ TDS_Box-modules__stack___33m4D"
>
  <label
    for="the-group_1"
  >
    <span
      class="TDS_Box-modules__betweenRightMargin-3___1dOvx TDS_Box-modules__inline___jTHcz alignFlexStart"
    >
      <span
        class="fakeRadio unchecked"
        data-testid="fake-input"
      >
        <input
          aria-invalid="false"
          class="hiddenInput"
          id="the-group_1"
          name="the-group"
          type="radio"
          value="1"
        />
      </span>
      <span
        class="TDS_Typography-modules__medium___1DC1g TDS_Typography-modules__wordBreak___3dmWU TDS_Typography-modules__mediumFont___2ULml TDS_Typography-modules__color___1Jt_W"
      >
        A label
      </span>
    </span>
  </label>
</div>
`;

exports[`Radio renders 1`] = `
<div
  class="TDS_Box-modules__betweenBottomMargin-2___31zX_ TDS_Box-modules__stack___33m4D"
>
  <label
    for="the-group_the-value"
  >
    <span
      class="TDS_Box-modules__betweenRightMargin-3___1dOvx TDS_Box-modules__inline___jTHcz alignFlexStart"
    >
      <span
        class="fakeRadio unchecked"
        data-testid="fake-input"
      >
        <input
          aria-invalid="false"
          class="hiddenInput"
          id="the-group_the-value"
          name="the-group"
          type="radio"
          value="the-value"
        />
      </span>
      <span
        class="TDS_Typography-modules__medium___1DC1g TDS_Typography-modules__wordBreak___3dmWU TDS_Typography-modules__mediumFont___2ULml TDS_Typography-modules__color___1Jt_W"
      >
        A label
      </span>
    </span>
  </label>
</div>
`;
